--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ header {
 .ccards {
 
     background-color: rgb(209, 204, 204);
-    margin: 1rem 0.8em 1 0.8en;
+    margin: 1rem 0.8rem 1rem 0.8rem;
     font-size: 15px;
 
 
@@ -72,7 +72,7 @@ header {
 .detailcard {
     max-height: 100%;
     background-color: rgb(57, 48, 83);
-    border: 1px solid rgb(57, 48, 83);
+    border: 1px solid rgb(80, 68, 117);
 }
 
 .check {
@@ -81,7 +81,7 @@ header {
 
 .cards {
     background-color: rgb(57, 48, 83);
-    border: 0 1px solid rgb(49, 49, 49);
+    border: 1px solid rgb(49, 49, 49);
 }
 
 .card-img-top {
