--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ header {
 .cards {
     background-color: rgb(57, 48, 83);
     border: 1px solid rgb(49, 49, 49);
+    
 }
 .cards h5 {
     font-weight: bold;
@@ -96,12 +97,16 @@ header {
 
 .card-img-top {
     height: 35vh;
-    max-width: 100%;
+    max-width: 90%;
     margin-top: .5rem;
+    align-self: center;
     object-fit: cover;
     box-shadow: 10px 5px 5px rgb(49, 49, 49);
 }
 
+.card{
+    background-color: rgb(224, 215, 250);
+}
 .icons {
     margin: .5rem;
     padding: .4rem;
@@ -190,4 +195,8 @@ tblStat {
 #btn-sub {
     border: 0;
     box-shadow: none;
+}
+
+.bg-custom-1 {
+ background-color: rgba(129, 120, 156, 0.973)!important;
 }
