--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,9 +90,10 @@ header {
 }
 
 .cardDetail-img {
-    height: 65vh;
-    max-width: 100%;
-    align-self: center;
+    height: 100%;
+    width: 100%;
+    /*align-self: center;*/
+    object-position: center center;
     object-fit: cover ;
     box-shadow: 10px 5px 5px rgb(49, 49, 49);
 }
