--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 main {
-    min-height: 70%;
+    min-height: 85%;
     background-color: rgb(57, 48, 83);
     border: 1px solid rgb(49, 49, 49);
 }
@@ -83,8 +83,9 @@ header {
 .cards {
     background-color: rgb(57, 48, 83);
     border: 1px solid rgb(49, 49, 49);
-    
+
 }
+
 .cards h5 {
     font-weight: bold;
 }
@@ -94,7 +95,7 @@ header {
     width: 100%;
     /*align-self: center;*/
     object-position: center center;
-    object-fit: cover ;
+    object-fit: cover;
     box-shadow: 10px 5px 5px rgb(49, 49, 49);
 }
 
@@ -107,9 +108,10 @@ header {
     box-shadow: 10px 5px 5px rgb(49, 49, 49);
 }
 
-.card{
+.card {
     background-color: rgb(224, 215, 250);
 }
+
 .icons {
     margin: .5rem;
     padding: .4rem;
@@ -122,12 +124,9 @@ svg text {
 }
 
 @media (max-width: 500px) {
-    svg text {
-        font-size: 18px;
-    }
 
     .table {
-        font-size: .5rem;
+        font-size: .8rem;
     }
 }
 
@@ -139,7 +138,7 @@ svg text {
 
 
 td {
-    
+
     text-align: center;
     font-weight: bolder;
     font-style: italic;
@@ -161,7 +160,6 @@ tblStat {
 
 .table {
     table-layout: fixed;
-    font-size: 1rem;
     background-color: rgb(143, 135, 185);
 }
 
@@ -206,16 +204,17 @@ tblStat {
 }
 
 .bg-custom-1 {
- background-color: rgba(129, 120, 156, 0.973)!important;
+    background-color: rgba(129, 120, 156, 0.973) !important;
 }
 
-.form-check{
+.form-check {
     font-size: .9rem;
 }
 
-.message{
+.message {
     border: 1px solid bisque;
     border-radius: 10px;
     background-color: rgb(10, 51, 78);
-    box-shadow: 5px 5px 5px rgb(112, 98, 148);;
+    box-shadow: 5px 5px 5px rgb(112, 98, 148);
+    ;
 }
